--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,14 @@ services:
     image: nginx:1.25.4-alpine
     volumes:
       - ./build:/usr/share/nginx/html
+      - ./data/nginx:/etc/nginx/conf.d
     ports:
-      - "8080:80"
+      - "80:80"
+      - "443:443"
+    restart: always
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
