--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,12 @@
 version: '3'
 services:
-  app-static:
-    image: nginx:1.25.4-alpine
+  static-hunt:
+    image: nginx:alpine
     volumes:
-      - ./build:/usr/share/nginx/html
-      - ./data/nginx:/etc/nginx/conf.d
+      - ./build:/usr/share/nginx/html:ro
+      - ./data/nginx:/etc/nginx/conf.d:ro
+      - ./data/certbot/conf:/etc/letsencrypt:ro
     ports:
       - "80:80"
       - "443:443"
     restart: always
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
