--- a/src/lib/quiz.json.example
+++ b/src/lib/quiz.json.example
@@ -14,7 +14,7 @@
             "lat": "50.0001",
             "lng": "10.0001"
         },
-        "answerText": "Pharrel Williams er en amerikansk sanger, sangskriver, musikproducer og mode designer. Han er bedst kendt som en del af hip hop og R&B produktionsteamet The Neptunes og som forsanger i gruppen N.E.R.D."
+        "answerText": "Pharrell Williams er en amerikansk sanger, sangskriver, musikproducer og mode designer. Han er bedst kendt som en del af hip hop og R&B produktionsteamet The Neptunes og som forsanger i gruppen N.E.R.D."
     },
     {
         "step": "2",
